chore: moved files to project's root folder and updated `pom.xml`